--- a/index.html
+++ b/index.html
@@ -190,12 +190,19 @@
                 </div>
                 <div class="card">
                     <h3>Settings</h3>
-                    <ul>
-                        <li><strong>Timeframe:</strong> 5 minutes</li>
-                        <li><strong>Factor:</strong> 2</li>
-                        <li><strong>Primary Mom:</strong> 1.5</li>
-                        <li><strong>Secondary Mom:</strong> 1.5</li>
-                        <li><strong>Contrarian:</strong> 1.5</li>
+                    <ul class="settings-list">
+                        <li class="setting-group">
+                            <strong>Scalping (Factor 1)</strong>
+                            <span>Primary Mom: 2 | Secondary Mom: 2 | Contrarian: 2</span>
+                        </li>
+                        <li class="setting-group">
+                            <strong>Normal (Factor 2)</strong>
+                            <span>Primary Mom: 1.5 | Secondary Mom: 1.5 | Contrarian: 1.5</span>
+                        </li>
+                        <li class="setting-group">
+                            <strong>Swing (Factor 5)</strong>
+                            <span>Primary Mom: 1.5 | Secondary Mom: 1.5 | Contrarian: 1.5</span>
+                        </li>
                     </ul>
                 </div>
             </div>
@@ -220,10 +227,17 @@
         <section id="disclaimer">
             <h2>10. Disclaimer & License</h2>
             <div class="card" style="border-color: var(--accent-red);">
-                <p><strong>Not an Automated System:</strong> Signals must be contextualized.</p>
-                <p><strong>Intellectual Property:</strong> Exclusive property of Killpips. No copying or resale.</p>
-                <p><strong>Risk Warning:</strong> Trading futures carries high risk. Past performance is not indicative
-                    of future results. Use at your own risk.</p>
+                <p>This indicator is provided <strong>exclusively for educational and informational purposes</strong>
+                    and does not represent in any way <strong>financial advice, investment solicitation, or operational
+                        recommendation</strong>.</p>
+                <p>Trading on futures, CFDs, and leveraged financial instruments carries <strong>a high level of
+                        risk</strong> and is not suitable for all investors. Past results <strong>are not indicative of
+                        future performance</strong>.</p>
+                <p>The user is solely responsible for their operational decisions and risk management. The author
+                    disclaims all responsibility for any losses, direct or indirect, resulting from use of the
+                    indicator.</p>
+                <p>It is recommended to always test the indicator in a <strong>simulated environment</strong> and to
+                    consult a qualified professional before operating in real markets.</p>
             </div>
         </section>
     </div>
